--- a/acemagic_s1/config.yaml
+++ b/acemagic_s1/config.yaml
@@ -2,21 +2,21 @@ name: AceMagic S1 Panel
 version: "1.0.0"
 slug: acemagic_s1
 description: Add-on for controlling AceMagic S1 TFT/LCD and LED strip with integrated web GUI
-url: "https://github.com/rlobanov/s1panel-ha-addon"  # Замените на URL вашего репозитория
+url: "https://github.com/rlobanov/s1panel-ha-addon"  # Р—Р°РјРµРЅРёС‚Рµ РЅР° URL РІР°С€РµРіРѕ СЂРµРїРѕР·РёС‚РѕСЂРёСЏ
 arch:
-  - amd64  # Если устройство x86-64; для других архитектур (например, arm64) добавьте соответствующий элемент
+  - amd64  # Р•СЃР»Рё СѓСЃС‚СЂРѕР№СЃС‚РІРѕ x86-64; РґР»СЏ РґСЂСѓРіРёС… Р°СЂС…РёС‚РµРєС‚СѓСЂ (РЅР°РїСЂРёРјРµСЂ, arm64) РґРѕР±Р°РІСЊС‚Рµ СЃРѕРѕС‚РІРµС‚СЃС‚РІСѓСЋС‰РёР№ СЌР»РµРјРµРЅС‚
 startup: application
 boot: auto
 ingress: true
-ingress_port: 8686  # Порт GUI; скорректируйте, если в s1panel используется другой (проверьте в index.js или config.json)
+ingress_port: 8686  # РџРѕСЂС‚ GUI; СЃРєРѕСЂСЂРµРєС‚РёСЂСѓР№С‚Рµ, РµСЃР»Рё РІ s1panel РёСЃРїРѕР»СЊР·СѓРµС‚СЃСЏ РґСЂСѓРіРѕР№ (РїСЂРѕРІРµСЂСЊС‚Рµ РІ index.js РёР»Рё config.json)
 panel_icon: mdi:monitor-dashboard
 devices:
-  - /dev/ttyUSB0:/dev/ttyUSB0:rwm  # Для LED через CH340
-  - /dev/bus/usb:/dev/bus/usb:rwm  # Для TFT через HID
+  - /dev/ttyUSB0:/dev/ttyUSB0:rwm  # Р”Р»СЏ LED С‡РµСЂРµР· CH340
+  - /dev/bus/usb:/dev/bus/usb:rwm  # Р”Р»СЏ TFT С‡РµСЂРµР· HID
 map:
-  - sysfs:ro  # Для доступа к /sys/class/net (сетевые сенсоры)
+  - sysfs:ro  # Р”Р»СЏ РґРѕСЃС‚СѓРїР° Рє /sys/class/net (СЃРµС‚РµРІС‹Рµ СЃРµРЅСЃРѕСЂС‹)
 privileged:
-  - SYS_RAWIO  # Для доступа к аппаратным устройствам
-  - SYS_ADMIN  # Для мониторинга системных ресурсов
+  - SYS_RAWIO  # Р”Р»СЏ РґРѕСЃС‚СѓРїР° Рє Р°РїРїР°СЂР°С‚РЅС‹Рј СѓСЃС‚СЂРѕР№СЃС‚РІР°Рј
+  - SYS_ADMIN  # Р”Р»СЏ РјРѕРЅРёС‚РѕСЂРёРЅРіР° СЃРёСЃС‚РµРјРЅС‹С… СЂРµСЃСѓСЂСЃРѕРІ
 options: {}
 schema: {}
