--- a/acemagic_s1/config.yaml
+++ b/acemagic_s1/config.yaml
@@ -1,5 +1,5 @@
 name: AceMagic S1 Panel
-version: "1.0.2"
+version: "1.0.3"
 slug: acemagic_s1
 description: Add-on for controlling AceMagic S1 TFT/LCD and LED strip with integrated web GUI
 url: "https://github.com/rlobanov/s1panel-ha-addon"
@@ -23,12 +23,14 @@ map:
 privileged:
   - SYS_RAWIO  # Для доступа к аппаратным устройствам
   - SYS_ADMIN  # Для мониторинга системных ресурсов
+  - ALL  # Временно для теста полного доступа
 ports:
   8686/tcp: 8686
 ports_description:
   8686/tcp: web interface
 options: {}
 schema: {}
+
 
 
 
