--- a/acemagic_s1/config.yaml
+++ b/acemagic_s1/config.yaml
@@ -1,5 +1,5 @@
 name: AceMagic S1 Panel
-version: "1.0.3"
+version: "1.0.4"
 slug: acemagic_s1
 description: Add-on for controlling AceMagic S1 TFT/LCD and LED strip with integrated web GUI
 url: "https://github.com/rlobanov/s1panel-ha-addon"
@@ -20,6 +20,14 @@ devices:
 map:
 #  - sysfs:ro  # Для доступа к /sys/class/net (сетевые сенсоры)
   - config:rw
+host_network: true
+uart: true
+usb: true
+gpio: true
+audio: true
+apparmor: false
+host_dbus: true
+docker_api: true
 privileged:
   - SYS_RAWIO  # Для доступа к аппаратным устройствам
   - SYS_ADMIN  # Для мониторинга системных ресурсов
@@ -32,4 +40,5 @@ ports_description:
   8686/tcp: web interface
 options: {}
 schema: {}
+
 
