--- a/acemagic_s1/Dockerfile
+++ b/acemagic_s1/Dockerfile
@@ -27,12 +27,12 @@ RUN npm install
 
 RUN cd gui && \
     npm install && \
-    npm run build && \
-    rm -rf node_modules  # Очистка для уменьшения размера (опционально)
+    npm run build
 
 EXPOSE 8686
 
 CMD ["node", "main.js"]
+
 
 
 
