--- a/acemagic_s1/config.yaml
+++ b/acemagic_s1/config.yaml
@@ -1,5 +1,5 @@
 name: AceMagic S1 Panel
-version: "1.0.7"
+version: "1.0.8"
 slug: acemagic_s1
 description: Add-on for controlling AceMagic S1 TFT/LCD and LED strip with integrated web GUI
 url: "https://github.com/rlobanov/s1panel-ha-addon"
@@ -21,6 +21,7 @@ map:
   - config:rw
 uart: true
 usb: true
+host_network: true
 #apparmor: false  # Тест без этого, если возможно
 privileged:
   - SYS_RAWIO
@@ -32,6 +33,7 @@ ports_description:
   8686/tcp: web interface
 options: {}
 schema: {}
+
 
 
 
