--- a/acemagic_s1/config.yaml
+++ b/acemagic_s1/config.yaml
@@ -1,5 +1,5 @@
 name: AceMagic S1 Panel
-version: "0.0.10"
+version: "0.0.11"
 slug: acemagic_s1
 description: Add-on for controlling AceMagic S1 TFT/LCD and LED strip with integrated web GUI
 url: "https://github.com/rlobanov/s1panel-ha-addon"
@@ -31,8 +31,19 @@ ports:
   8686/tcp: 8686
 ports_description:
   8686/tcp: web interface
-options: {}
-schema: {}
+options:
+  network_interface: "enp4s0"
+  theme: "themes/simple_demo/portrait_simple.json"
+  poll: 3000
+  refresh: 1600
+  heartbeat: 60000
+schema:
+  network_interface: str
+  theme: str
+  poll: int(500,10000)
+  refresh: int(500,5000)
+  heartbeat: int(10000,300000)
+
 
 
 
